Adding text-shadow and updating title

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 author      : Zach Williams, @zachwill
 analytics   : UA-XXXXX-X
 description : "Macon MTA will be sponsoring a Try Transit week June 24-28."
-title       : Try MTA Transit
+title       : Try MTA
 
 # Defaults
 pygments: true
